--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
-import matplotlib as plt
-pip install openpyxl
-pip install xlrd
+streamlit
+pandas
+matplotlib
+openpyxl
+xlrd
